--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,22 +12,22 @@
             <div class="vignette"></div>
             <img class = "parallax background" data-speedx="-0.0009" data-speedy="-0.0005" src="/img/Background.webp" />
             <img class="parallax fireplace" data-speedx="0" data-speedy="0" src="/img/Fire.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.009" data-speedy="-0.0019" src="/img/Fireplace.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Jukebox.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.001" data-speedy="-0.0019" src="/img/Guitar.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Painting.webp"/>
+            <img class="parallax fireplace" data-speedx="-0.0075" data-speedy="-0.0019" src="/img/Fireplace.webp"/>
+            <img class="parallax fireplace" data-speedx="-0.0075" data-speedy="-0.0019" src="/img/Carpet.webp"/>
+            <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Shelf.webp"/>
+            <div class="jukebox-guitar">
+                <img class="parallax jukebox" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Jukebox.webp"/>
+                <img class="parallax guitar" data-speedx="-0.0015" data-speedy="-0.0019" src="/img/Guitar.webp"/>
+            </div>
+            <img class="parallax linkdeln hover" onclick="location.href='https://www.linkedin.com/in/soham-gupta-b567b2274/'" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Linkdeln.webp"/>
+            <img class="parallax github hover" onclick="location.href='https://github.com/fuel000cynical'" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Github.webp"/>
+            <!-- <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Painting.webp"/>
             <img class="parallax fireplace" data-speedx="-0.005" data-speedy="-0.0019" src="/img/LawBooks.webp"/>
             <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Robe.webp"/>
             <img class="parallax fireplace" data-speedx="-0.009" data-speedy="-0.0019" src="/img/Trophies.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.009" data-speedy="-0.0019" src="/img/Carpet.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Shelf.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Github.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Linkdeln.webp"/>
             <img class="parallax fireplace" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Table.webp"/>
             <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Computer.webp"/>
-            <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Bookshelf.webp"/>
-
-
+            <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Bookshelf.webp"/> -->
         </div>
         <script src="/js/main.js"></script>
     </body>
