--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,19 +8,17 @@ body{
 
 .vignette{
     position: absolute;
-    z-index: 100;
+    z-index: 0;
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
     background-color: #fff;
     background: radial-gradient(ellipse at center, rgba(0,0,0,0) 75%, rgba(0,0,0,0.2));
-    pointer-events: none;
 }
 
 .parallax{
     position:absolute;
-    pointer-events: none;
     transition: 0.45s cubic-bezier(.2, .49, .32, .99);
     height: 100vh;
     width: 100vw;
@@ -37,4 +35,48 @@ body{
 
 .jukebox{
     z-index: 2;
+    height: 37.03vh;
+    width: 13.54vw;
+    margin: 40.74vh 84.89vw 22.22vh 1.56vw;
+}
+
+.guitar{
+    z-index: 2;
+    height: 25.92vh;
+    width: 8.85vw;
+    margin: 51.85vh 78.64vw 22.22vh 12.5vw;
+}
+
+.jukebox-guitar:hover .jukebox,
+.jukebox-guitar:hover .guitar {
+  filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.8));
+  cursor: pointer;
+}
+
+.jukebox-guitar::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.linkdeln{
+    z-index: 2;
+    height: 7.87vh;
+    width: 4.68vw;
+    margin: 27.77vh 29.42vw 64.35vh 65.88vw;
+}
+
+.github{
+    z-index: 2;
+    height: 12.96vh;
+    width: 5.72vw;
+    margin: 22.68vh 23.43vw 64.35vh 70.83vw;
+}
+
+.hover:hover{
+    cursor:pointer;
+    filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.8));
 }
