--- a/static/css/main.css
+++ b/static/css/main.css
@@ -143,8 +143,8 @@ body{
 }
 
 .popup{
-    display: block;
-    opacity: 1;
+    display: none;
+    opacity: 0;
     position: absolute;
     z-index: 100;
     background-color: rgba(0,0,0,0.2);
