--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     </head>
     <body>
-        <div>
+        <div style="max-height: 100vh; max-width: 100vw;">
             <div class="vignette"></div>
             <img class="parallax background" data-speedx="-0.0009" data-speedy="-0.0005" src="/img/Background.webp" />
             <img class="parallax fireplace" data-speedx="0" data-speedy="0" src="/img/Fire.webp"/>
