--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,6 +105,35 @@ body{
     margin: 22.68vh 23.43vw 64.35vh 70.83vw;
 }
 
+.table{
+    z-index: 2;
+    height: 18.51vh;
+    width: 16.66vw;
+    margin: 60.18vh 16.14vw 21.29vh 67.18vw;
+}
+
+.computer{
+    z-index: 2;
+    height:18.51vh;
+    width: 14.06vw;
+    margin: 50.92vh 16.40vw 30.55vh 69.27vw;
+}
+
+.table-computer:hover .table,
+.table-computer:hover .computer {
+  filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.8));
+  cursor: pointer;
+}
+
+.table-computer::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
 .hover:hover{
     cursor:pointer;
     filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.8));
@@ -138,7 +167,7 @@ body{
 
 .animate-fade-out {
     animation-name: fadeOut;
-    animation-duration: 1s;
+    animation-duration: 0.2s;
     animation-fill-mode: forwards;
 }
 
@@ -179,6 +208,10 @@ body{
 
 
 /* -----guitar display--------------- */
+
+.guitarPopup{
+    display: none;
+}
 
 .juke{
     height: 54.62vh;
@@ -357,4 +390,56 @@ body{
 
 .disk-right:hover{
     filter: drop-shadow(-10px 0 10px rgba(0, 255, 255, 0.4)) !important;
+}
+
+.musicArrow{
+    height: 9vh;
+    width: 3vw;
+}
+
+.musicArrow:hover{
+    cursor: pointer;
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.4)) !important;
+}
+
+@keyframes shiftLeft {
+    0% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateX(-10px);
+    }
+}
+
+.arrowLeft{
+    filter: drop-shadow(5px 0 5px rgba(0, 0, 255, 0.4));
+    animation: shiftLeft 1s alternate infinite;
+}
+
+@keyframes shiftRight {
+    0% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateX(10px);
+    }
+}
+
+.arrowRight{
+    filter: drop-shadow(-5px 0 5px rgba(0, 0, 255, 0.4));
+    animation: shiftRight 1s alternate infinite;
+}
+
+/* ---------------------Computer-Menu--------------------------- */
+
+.computerPopup{
+    display: none;
+}
+
+.codeEditor{
+    height: 52.14vh;
+    width: 55vw;
+    position: absolute;
+    margin: 9.25vh 5.83vw 5.25vh 5.83vw;
+    z-index: 102;
 }
