--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,8 +24,8 @@
                 <img class="parallax jukebox" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Jukebox.webp"/>
                 <img class="parallax guitar" data-speedx="-0.0015" data-speedy="-0.0019" src="/img/Guitar.webp"/>
             </div>
-            <img class="parallax linkdeln hover" onclick="window.open('https://www.linkedin.com/in/soham-gupta-b567b2274/', '_blank').focus();" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Linkdeln.webp"/>
-            <img class="parallax github hover" onclick="window.open('https://github.com/fuel000cynical', '_blank').focus();" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Github.webp"/>
+            <img class="parallax linkdelnOnShelf hover" onclick="window.open('https://www.linkedin.com/in/soham-gupta-b567b2274/', '_blank').focus();" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Linkdeln.webp"/>
+            <img class="parallax githubOnShelf hover" onclick="window.open('https://github.com/fuel000cynical', '_blank').focus();" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Github.webp"/>
             <div class="lawStuff" onclick="popUpOpen('lawPage')">
               <img class="parallax lawBooks" data-speedx="-0.005" data-speedy="-0.0019" src="/img/LawBooks.webp"/>
               <img class="parallax robe" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Robe.webp"/>
@@ -71,11 +71,21 @@
                           <br>
                           <span class="projectDate">5th March 2023</span>
                           <br>
-                          <span class="projectActions"></span>
+                          <div class="projectTechStack"><font color="orange">let</font> techStack = {<font color="lightgreen">"html", "css", "js", "mongoDB", "express", "python"</font>}</div>
                         </div>
                       </div>
                       <div class="bottomPartShowProject">
-                        <span class="projectDescription"></span>
+                        <div class="projectDescription">
+                          <font color="orange">let</font> description = <font color="lightgreen">"This project is a portfolio website."</font>
+                        </div>
+                        <div class="projectFunFact">
+                          //fun-fact: I had to learn how to make pixel art.
+                        </div>
+                        <div class="projectActions">
+                          <div onclick="window.open('https://www.linkedin.com/in/soham-gupta-b567b2274/', '_blank').focus();"><i class="nes-icon github"></i></div>
+                          <div onclick="window.open('https://www.linkedin.com/in/soham-gupta-b567b2274/', '_blank').focus();"><i class="nes-icon youtube"></i></div>
+                          <div onclick="window.open('https://www.linkedin.com/in/soham-gupta-b567b2274/', '_blank').focus();"><i class="nes-icon trophy"></i></div>
+                        </div>
                       </div>
                     </div>
                   </div>
