--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,8 @@
         <style></style>
         <link rel="stylesheet" href="/css/nes.min.css">
         <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=more_up,search" />
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
     </head>
     <body>
         <div style="max-height: 100vh; max-width: 100vw;">
@@ -20,13 +21,15 @@
             <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Painting.webp"/>
             <img class="parallax fireplace" data-speedx="-0.009" data-speedy="-0.0019" src="/img/Trophies.webp"/>
             <img class="parallax fireplace" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Bookshelf.webp"/>
+            <img class="parallax name" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Name.webp"/>
+            <img class="parallax helpButton hover" data-speedx="-0.003" data-speedy="-0.0019" src="/img/HelpButton.webp"/>
             <div class="jukebox-guitar" onclick="popUpOpen('guitar')">
                 <img class="parallax jukebox" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Jukebox.webp"/>
                 <img class="parallax guitar" data-speedx="-0.0015" data-speedy="-0.0019" src="/img/Guitar.webp"/>
             </div>
             <img class="parallax linkdelnOnShelf hover" onclick="window.open('https://www.linkedin.com/in/soham-gupta-b567b2274/', '_blank').focus();" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Linkdeln.webp"/>
             <img class="parallax githubOnShelf hover" onclick="window.open('https://github.com/fuel000cynical', '_blank').focus();" data-speedx="-0.005" data-speedy="-0.0019" src="/img/Github.webp"/>
-            <div class="lawStuff" onclick="popUpOpen('lawPage')">
+            <div class="lawStuff" onclick="popUpOpen('law')">
               <img class="parallax lawBooks" data-speedx="-0.005" data-speedy="-0.0019" src="/img/LawBooks.webp"/>
               <img class="parallax robe" data-speedx="-0.003" data-speedy="-0.0019" src="/img/Robe.webp"/>
             </div>
@@ -41,6 +44,24 @@
                 <button onclick="closePopup()" class="nes-btn popup-close-btn"><i class="nes-icon close is-small"></i></button>
 
 
+                <div class="lawPopup" id="lawPopup">
+                  <div class="mainLawTop">
+                    <div class="lawBlogMenu">
+                      <a class="active" href="/law/blog/<%= recentLawBlog[0]._id %>"><%= recentLawBlog[0].title %></a>
+                      <a href="/law/blog/<%= recentLawBlog[1]._id %>"><%= recentLawBlog[1].title %></a>
+                      <a href="/law/blog/<%= recentLawBlog[2]._id %>">More</a>
+                    </div>
+                    <img class="lawTop" src="/img/lawPaperTop.webp" />
+                  </div>
+                  <div class="mainLawShow">
+                    <h4><%= recentLawBlog[0].date.toLocaleString('default', { month: 'long' }) %> <%= recentLawBlog[0].date.getDate() %>, <%= recentLawBlog[0].date.getFullYear() %></h4>
+                    <article id="blogPost" class="preview">
+
+                    </article>
+                    <hr class="lawPageStop">
+                    <a class="nes-btn" style="padding: 0;" href="/law/blog/<%= recentLawBlog[1]._id %>">More  >></a>
+                  </div>
+                </div>
 
                 <div class="guitarPopup" id="guitarPopup">
                     <img class="juke" src="/img/guitarDisplay/jukebox.webp" />
@@ -95,6 +116,9 @@
         </div>
         <script src="/js/main.js"></script>
         <script>
+          document.getElementById("blogPost").innerHTML = marked.parse("<%= recentLawBlog[0].content %>");
+        </script>
+        <script>
         const guitarData=[
         <% guitarCovers.forEach(g => { %>
           <% let query = g.name + g.artist; g.tags.forEach(t => {query = query + t;}); query = query.replace(/\s/g,'').toLowerCase(); %>
@@ -112,7 +136,6 @@
         ];
 
         let searchResult = guitarData;
-        <!--  -->
 
         function searchGuitar(){
           let gSearchAsk = document.getElementById("jukeSearch").value;
