--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,11 +4,28 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <style></style>
+        <script>
+          function checkScreenAndRedirect() {
+                const width = window.innerWidth;
+                const height = window.innerHeight;
+                const aspectRatio = width / height;
+
+                // Example condition: if the screen is more portrait-like (e.g., phone)
+                if (aspectRatio < 1) {
+                  // Redirect to a mobile-specific version
+                  window.location.href = "/mobile";
+                }
+              }
+
+          window.onload = checkScreenAndRedirect;
+          window.onresize = () => {
+            checkScreenAndRedirect();
+          };
+        </script>
         <link rel="stylesheet" href="/css/nes.min.css">
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=more_up,search" />
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
     </head>
     <body>
         <div style="max-height: 100vh; max-width: 100vw;">
